--- a/GameData/PJ2/KopernicusFiles/1_InnerSystem/IlioAB_c/Arach.cfg
+++ b/GameData/PJ2/KopernicusFiles/1_InnerSystem/IlioAB_c/Arach.cfg
@@ -12,7 +12,7 @@
 		}
 		Properties
 		{
-			description = A middle moon of Kilna, trapped in an orbital resonance with Solin. Not much is known about Arach, other than its somewhat uniform light curve and brownish spectrum. Arach's claim to fame was as the main setting in season 2 episode 15 of Captain Positron, where Lt. Cmdr Roe Baught is trapped in a laboratory run by scary spider machines built by the evil Dr. N.A. Kill. In the episode, Roe Baught must avoid being disassembled long enough to be rescued by the cunning Captain Positron and--but I shan't spoil the episode's ending! \n -Mh
+			description = A middle moon of Kilna, trapped in an orbital resonance with Solin. Not much is known about Arach, though its light curve reveals a quite substantial brightening and dimming throughout its rotation, and its spectrum also changes throughout the orbit, indicating that it is redder on one half. Arach's claim to fame was as the main setting in season 2 episode 15 of Captain Positron, where Lt. Cmdr Roe Baught is trapped in a laboratory run by scary spider machines built by the evil Dr. N.A. Kill. In the episode, Roe Baught must avoid being disassembled long enough to be rescued by the cunning Captain Positron and--but I shan't spoil the episode's ending! \n -Mh
 			displayName = Arach^N
 			radius = 9799
 			geeASL = 0.008
@@ -78,6 +78,26 @@
 			}
 			Mods
 			{
+				VertexHeightMap
+				{
+					map = PJ2/KopernicusFiles/1_InnerSystem/IlioAB_c/PluginData/penut.png
+					offset = 0
+					deformity = 8999
+					scaleDeformityByRadius = False
+					order = 1
+					enabled = True
+					name = VertexHeightMap
+				}
+				VertexHeightMap
+				{
+					map = PJ2/KopernicusFiles/1_InnerSystem/IlioAB_c/PluginData/Arach_detail.png
+					offset = 0
+					deformity = 1600
+					scaleDeformityByRadius = False
+					order = 2
+					enabled = True
+					name = VertexHeightMap
+				}
 				VertexHeightNoiseVertHeightCurve2
 				{
 					deformity = 1200
@@ -106,6 +126,17 @@
 						key = 1 1 6.106985 6.106985
 					}
 				}
+				VertexSimplexHeightAbsolute
+				{
+					deformity = 200
+					frequency = 4
+					octaves = 3
+					persistence = 0.6
+					seed = 7616534
+					order = 2
+					enabled = True
+					name = noisey1
+				}
 				VoronoiCraters
 				{
 					colorOpacity = 0
@@ -115,25 +146,27 @@
 					jitterHeight = 3
 					rFactor = 1
 					rOffset = 1
-					simplexFrequency = 12
+					simplexFrequency = 21
 					simplexOctaves = 3
 					simplexPersistence = 0.5
-					simplexSeed = 42
+					simplexSeed = 176532
 					voronoiDisplacement = 0
-					voronoiFrequency = 3
-					voronoiSeed = 81634
-					order = 3
+					voronoiFrequency = 4
+					voronoiSeed = 824
+					order = 101
 					enabled = True
-					name = crters
+					name = VoronoiCraters
 					CraterCurve
 					{
-						key = -1 -0.75 -0.06500059 -0.06500059
-						key = -0.9 -0.75 -0.2176399 -0.2176399
-						key = -0.65 -0.14 5.289535 5.289535
-						key = -0.6 0.255 9.069458 -2.149609
-						key = -0.3 0 -0.4453675 -0.4453675
-						key = 0.37 0 -0.01884932 -0.01884932
-						key = 1 0 0.01397126 0.01397126
+						key = -0.9982381 -0.7411783 -0.06500059 -0.06500059
+						key = -0.9332262 -0.7678316 -0.2176399 -0.2176399
+						key = -0.8990405 -0.7433339 -2.560626 -2.560626
+						key = -0.7445966 -0.8581167 0.4436148 0.4436148
+						key = -0.4499771 -0.1392395 5.289535 5.289535
+						key = -0.4015177 0.2551735 9.069458 -2.149609
+						key = -0.2297457 0.002857953 -0.4453675 -0.4453675
+						key = 0.2724952 0.00423781 -0.01884932 -0.01884932
+						key = 0.9998434 -0.004090764 0.01397126 0.01397126
 					}
 					JitterCurve
 					{
@@ -145,17 +178,6 @@
 						key = -0.2988068 0.002564805 -0.01814346 -0.01814346
 						key = 0.9970253 0.003401639 0 0
 					}
-				}
-				VertexSimplexHeightAbsolute
-				{
-					deformity = 300
-					frequency = 4
-					octaves = 3
-					persistence = 0.6
-					seed = 9812435
-					order = 2
-					enabled = True
-					name = noisey1
 				}
 				VertexColorMap
 				{
