--- a/GameData/PJ2/KopernicusFiles/1_InnerSystem/IlioAB_d/Marith.cfg
+++ b/GameData/PJ2/KopernicusFiles/1_InnerSystem/IlioAB_d/Marith.cfg
@@ -81,8 +81,8 @@
 			}
 			OnDemand
 			{
-				texture = PJ2\KopernicusFiles\1_InnerSystem\IlioAB_d\PluginData\pj2moomcolor5.dds
-				normals = PJ2\KopernicusFiles\1_InnerSystem\IlioAB_d\PluginData\IlioAB_d_a_Normal.dds
+				texture = PJ2/KopernicusFiles/1_InnerSystem/IlioAB_d/PluginData/pj2moomcolor5.dds
+				normals = PJ2/KopernicusFiles/1_InnerSystem/IlioAB_d/PluginData/IlioAB_d_a_Normal.dds
 			}
 		}
 		PQS
@@ -248,7 +248,7 @@
 				}
 				VertexHeightMap
 				{
-					map = PJ2\KopernicusFiles\1_InnerSystem\IlioAB_d\PluginData\pj2moomH.png
+					map = PJ2/KopernicusFiles/1_InnerSystem/IlioAB_d/PluginData/pj2moomH.png
 					offset = 0
 					deformity = 4000
 					scaleDeformityByRadius = false
@@ -257,7 +257,7 @@
 				}
 				VertexColorMap
 				{
-					map = PJ2\KopernicusFiles\1_InnerSystem\IlioAB_d\PluginData\pj2moomcolor5.dds
+					map = PJ2/KopernicusFiles/1_InnerSystem/IlioAB_d/PluginData/pj2moomcolor5.dds
 					order = 1
 					enabled = true
 				}
