--- a/GameData/PJ2/KopernicusFiles/2_PyriSystem/IlioC_0_Greek/Scatterer/TritonisSystemScatterer.cfg
+++ b/GameData/PJ2/KopernicusFiles/2_PyriSystem/IlioC_0_Greek/Scatterer/TritonisSystemScatterer.cfg
@@ -46,8 +46,8 @@
 		{
 			celestialBodyName = Arterr
 			transformName = Arterr
-			loadDistance = 100000000
-			unloadDistance = 200000000
+			loadDistance = 500000000
+			unloadDistance = 1E+09
 			hasOcean = True
 			flatScaledSpaceModel = False
 			usesCloudIntegration = True
