--- a/GameData/PJ2/KopernicusFiles/2_PyriSystem/IlioC_b_HOMEWORLD/AlternateVersion/CBx/PJ2_LaughTrack.cfg
+++ b/GameData/PJ2/KopernicusFiles/2_PyriSystem/IlioC_b_HOMEWORLD/AlternateVersion/CBx/PJ2_LaughTrack.cfg
@@ -2,7 +2,7 @@
 {
 	Body
 	{
-		name = ??
+		name = Laughtrack
 		cacheFile = PJ2/KopernicusFiles/2_PyriSystem/IlioC_b_HOMEWORLD/AlternateVersion/CBx/Cache/Cbxlaugh.bin
 		identifier = PJ2/Laughtrack
 		Template
