--- a/GameData/PJ2/KopernicusFiles/2_PyriSystem/IlioC_b_HOMEWORLD/AlternateVersion/CBx/PJ2_Ploob.cfg
+++ b/GameData/PJ2/KopernicusFiles/2_PyriSystem/IlioC_b_HOMEWORLD/AlternateVersion/CBx/PJ2_Ploob.cfg
@@ -3,7 +3,7 @@
 	Body
 	{
 		//you can change the name and displayName but please do not change the identifier.
-		name = ???
+		name = Ploob
 		cacheFile = PJ2/KopernicusFiles/2_PyriSystem/IlioC_b_HOMEWORLD/AlternateVersion/CBx/Cache/Cbxx.bin
 		identifier = PJ2/Ploob
 		Template
@@ -28,7 +28,7 @@
 				inSpaceLowDataValue = 10
 				inSpaceHighDataValue = 10
 				recoveryValue = 10
-				spaceAltitudeThreshold = 20000
+				spaceAltitudeThreshold = 8000
 
 			}
 			biomeMap = PJ2/KopernicusFiles/2_PyriSystem/IlioC_b_HOMEWORLD/AlternateVersion/CBx/PluginData/Pluob_Biome.png
