--- a/GameData/PJ2/KopernicusFiles/2_PyriSystem/IlioC_b_HOMEWORLD/AlternateVersion/CBx/PJ2_SettingsHack.cfg
+++ b/GameData/PJ2/KopernicusFiles/2_PyriSystem/IlioC_b_HOMEWORLD/AlternateVersion/CBx/PJ2_SettingsHack.cfg
@@ -3,9 +3,9 @@
 	Body
 	{
 		//you can change the name and displayName but please do not change the identifier.
-		name = ????
+		name = PJ2Settings
 		cacheFile = PJ2/KopernicusFiles/2_PyriSystem/IlioC_b_HOMEWORLD/AlternateVersion/CBx/Cache/Cbx.bin
-		identifier = PJ2/????
+		identifier = PJ2/Settings
 		Template
 		{
 			name = Minmus
@@ -13,7 +13,7 @@
 		}
 		Properties
 		{
-			displayName = ????
+			displayName = ????^N
 			description = I'm so glad you're finally here.\n -Wolf Rayet.
 			radius = 9500
 			geeASL = 1.75
