--- a/GameData/PJ2/KopernicusFiles/2_PyriSystem/IlioC_b_HOMEWORLD/AlternateVersion/CBx/ScienceDefs/StockDefs/ScienceDefs.cfg
+++ b/GameData/PJ2/KopernicusFiles/2_PyriSystem/IlioC_b_HOMEWORLD/AlternateVersion/CBx/ScienceDefs/StockDefs/ScienceDefs.cfg
@@ -122,7 +122,7 @@
 	{
 		Body
 		{
-			name = PJ2/???? //Antichthon
+			name = PJ2/Settings //Antichthon
 			Values
 			{
 				SrfLanded = You feel a strange calling, a presence all around you. It's hard to explain. Something is calling out to you. How can you call back?
@@ -149,13 +149,13 @@
 			name = PJ2/Ploob //Ploob
 			Values
 			{
-				InSpaceHigh = You open hailing frequencies--this bizarre construction, hovering ominously above Zhandar, is clearly artificial in nature. Remarkably, you get a response.\n\n"Suul-suul. Blursh! Meeshaloob... Awasa Poa! Dagdag."
-				
+				InSpace = You open hailing frequencies--this bizarre construction, hovering ominously above Zhandar, is clearly artificial in nature. Remarkably, you get a response.\n\n"Suul-suul. Blursh! Meeshaloob... Awasa Poa! Dagdag."
+				SrfLanded = You open hailing frequencies--this bizarre construction, hovering ominously above Zhandar, is clearly artificial in nature. Remarkably, you get a response.\n\n"Suul-suul. Blursh! Meeshaloob... Awasa Poa! Dagdag."
 			}
 		}
 		Body
 		{
-			name = PJ2/????
+			name = PJ2/Settings
 			Values
 			{
 				InSpaceHigh = You open hailing frequencies, despite the fact that there lacks any obvious indication of artificial technology visible from space. Remarkably, you get a response. Fed through the universal translator algorithims:\n\n "Come closer."
@@ -172,7 +172,7 @@
 	{
 		Body
 		{
-			name = PJ2/????
+			name = PJ2/Settings
 			Values
 			{
 				SrfLanded = And it is a song, a mere whisper, a dirge, a cry for help. It is exhorting the void to listen, demanding a response. That is life as a whole: the voice calling "I was here, dammit, listen!" Antichthon is the answer: I know you are here. I see you. You will be remembered. The processes that formed those spiral paths- they are the universe speaking. You can trace those spirals ever-downward, on scales from the planetary to the molecular. The fractal is all-encompassing. You believe, don't you? Let's go there and find out. Together, we will be remembered.
@@ -194,7 +194,7 @@
 		}
 		Body
 		{
-			name = PJ2/????
+			name = PJ2/Settings
 			Values
 			{
 				SrfLandedPlains = The material is extraordinarily dense--each pound of dirt weighs over 100 pounds!
@@ -210,7 +210,7 @@
 	{
 		Body
 		{
-			name = PJ2/????
+			name = PJ2/Settings
 			Values
 			{
 				SrfLanded = Despite the overbearing presence of Pyri in the daytime sky, the temperature is livable, though Pyrishine would still cook you if you didn't stay in the shade.
@@ -226,7 +226,7 @@
 	{
 		Body
 		{
-			name = PJ2/????
+			name = PJ2/Settings
 			Values
 			{
 				SrfLanded = The goo is completely content here. It has turned green and is photosynthesizing; meanwhile the CO2 content of the canister is increasing. The goo behaves as it does under idealized laboratory conditions, in fact.
@@ -250,7 +250,7 @@
 	{
 		Body
 		{
-			name = PJ2/????
+			name = PJ2/Settings
 			Values
 			{
 				InSpace = The object's magnetic field is highly complex, with each spiral structure corresponding to a magnetic pole.
@@ -264,7 +264,7 @@
 	{
 		Body
 		{
-			name = PJ2/????
+			name = PJ2/Settings
 			Values
 			{
 				SrfLanded = There's a faint repeating hum. This buzzing is quite familiar, but you can't quite place your finger on it.
@@ -279,7 +279,7 @@
 		
 		Body
 		{
-			name = PJ2/????
+			name = PJ2/Settings
 			Values
 			{
 				InSpace = Antichthon's gravity is extraordinarily high; about 100 times higher than it should be. That... sounds familiar...
@@ -301,7 +301,7 @@
 	{
 		Body
 		{
-			name = PJ2/????
+			name = PJ2/Settings
 			Values
 			{
 				FlyingHigh = Antichthon's scale height is remarkably short given its gravity.
@@ -317,7 +317,7 @@
 	{
 		Body
 		{
-			name = PJ2/????
+			name = PJ2/Settings
 			Values
 			{
 				Flying = The atmosphere doesn't actually seem to be COMPOSED of anything, as such. One possible explanation is it's just sort of a strong pressure being exerted by spacetime itself as it crumples around whatever THIS THING is.
