--- a/GameData/PJ2/KopernicusFiles/3_OuterSystem/IlioABC_d/KopernicusFiles/Kialla/0_Kialla.cfg
+++ b/GameData/PJ2/KopernicusFiles/3_OuterSystem/IlioABC_d/KopernicusFiles/Kialla/0_Kialla.cfg
@@ -22,6 +22,7 @@
 			description = Upon its discovery, Kialla was declared to be the definitive edge of the Ilio system. This podium would not last long, however, as soon enough an entire population of bodies on the edge of the system would be identified. Upon this realization, the oh-so-wise dynamicists of Armstrong decided to move the goal-post to Tobalk-Turtlestar, and declared the rest, "Just There." Despite the silly semantics, REAL planetary astronomers recognize the Kialla system as a diverse hub of icy bodies just waiting to be understood.\n\n-JoQueeb
 			// 1/100 earth mass in kilograms
 			mass = 5.23e20
+			rotationPeriod = 276982.639780946
 			biomeMap = PJ2/Kopernicusfiles/3_Outersystem/IlioABC_d/PluginData/KiallaBiome.png
 			Biomes
 			{
@@ -73,7 +74,7 @@
 			
 			eccentricity = 0.19642
 			longitudeOfAscendingNode = 122
-			rotationPeriod = 276982.639780946
+			//rotationPeriod = 276982.639780946
 			argumentOfPeriapsis = 239
 			meanAnomalyAtEpochD = 218
 			inclination = 28
