--- a/GameData/PJ2/Parts/AntennaScience.cfg
+++ b/GameData/PJ2/Parts/AntennaScience.cfg
@@ -12,10 +12,54 @@
 		hideUIwhenUnavailable = True
 		rerunnable = True
 		xmitDataScalar = 1.0
-		usageReqMaskInternal = 5
+		usageReqMaskInternal = 3
 		usageReqMaskExternal = -1
 	}
 }
+//Spoilers below!
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+//spoilers begin here.
 EXPERIMENT_DEFINITION
 {
 	id = HailingFrequencies
@@ -30,12 +74,18 @@ EXPERIMENT_DEFINITION
 	
 	RESULTS
 	{
-		default = Opened hailing frequencies. No response.
+		default = Opened hailing frequencies. No response. You remind yourself that a null result is still a valid scientific result.
+		KiallaInSpace = While you got no response to your hailing frequencies, you are reading a weak distress signal from somewhere in this planetary system! It's too faint at this distance to localize it or to read what it says, but it is on an ancient Kerbal Interstellar Space Program distress channel!
+		TwilightInSpace = ...ert! USS Twilight in severe distress. Requesting assistance from any nearby vessels. 
+USS Twilight computer: This has been repetition two billion, three hundred seventy-three million, five hundred ninety-five. Message repeats. Red al...
+		TwilightSrfLanded = A burst of data is suddenly transmitted to your ship's antenna. It's in the ancient Kerbin language: KEY = "CYLINDER"\n Y304 D33\n\nUTC 03:25:00 - Liftoff\n\nUTC 03:26:06 - Booster Separation\n\nUTC 03:29:44 - Main Engine Cutoff\n\nUTC 03:29:49 - First Stage Separation\n\nUTC 03:30:01 - Second Stage Ignition\n\nUTC 03:35:08 - Second Stage Engine Cutoff\n\nUTC 03:38:47 - Beginning Approach to USS Twilight\n\nUTC 03:59:13 - Final Approach\n\nUTC 04:04:56 - Docking Sequence Complete\n\nUTC 11:17:45 - Main Engine Ignition\n\nUTC 14:53:11 - Main Engine Cutoff\n\nUTC 14:54:01 - Beginning Hull Spin-up\n\nUTC 14:55:54 - 0.25G\n\nUTC 14:57:19 - 0.5G\n\nUTC 14:58:52 - 0.75G\n\nUTC 14:59:33 - Hull Spin-up Complete\n\nUTC 17:11:38 - Exiting Sphere of Influence\n\nY304 D57\n\nUTC 09:59:30 - Power Low\n\nUTC 09:59:47 - Changing Power Source\n\nY306 D214\n\nUTC 01:07:29 - Exiting Sphere of Influence\n\nY342 D114\n\nUTC 00:36:27 - Entering Sphere of Influence\n\nY342 D124\n\nUTC 17:44:04 - Entering Sphere of Influence\n\nUTC 17:44:57 - Entering Sphere of Influence\n\nUTC 17:44:58 - Hull Breach
 		Body
 		{
 			name = PJ2/Armstrong
 			Values
 			{
+				InSpace = You listen to the combined radio chatter of an entire planet, before deciding to open hailing frequencies to try and talk to someone, anyone. You say 'hello,' but then you hear a loud horn and a shout. You check which channel you have tuned into. It's the Great Armstrong Railway's internal radio system. Oops. It seems like you have accidentally spooked a railway engineer. You hope you haven't caused an accident.
+				
 				SrfLandedLaunchPad = You have completed a successful test of the spacecraft's communications systems. However, mission control, having just called itself, is beginning to experience an audio feedback loop, and CapCom's cough has just been magnified into an ear-piercing scream. You cut the channel before everyone's hearing is damaged permanently.
 				SrfLandedKSC = You have completed a successful test of the spacecraft's communications systems. However, mission control, having just called itself, is beginning to experience an audio feedback loop, and CapCom's cough has just been magnified into an ear-piercing scream. You cut the channel before everyone's hearing is damaged permanently.
 				
@@ -58,4 +108,5 @@ EXPERIMENT_DEFINITION
 		}
 		
 	}
+	
 }
