--- a/GameData/PJ2/LoadingScreens/Sigma88LoadingScreens.cfg
+++ b/GameData/PJ2/LoadingScreens/Sigma88LoadingScreens.cfg
@@ -4,9 +4,9 @@ Sigma88LoadingScreens
 	
 	removeStockTips = True
 	
-	//folder = WhirligigWorld/LoadingScreens/Screens
+	folder = PJ2/LoadingScreens/Screens
 	
 	tipsFile = PJ2/LoadingScreens/tips.txt
 	
-	//logoScreen = WhirligigWorld/LoadingScreens/Screens/Gregrox_Cover.dds
+	logoScreen = PJ2/LoadingScreens/Screens/PlanetaryChart.dds
 }
