Loading Screen, Flags, Backlit Rings, Science
* Backlit rings for Descry and Kilna by Wolf-Rayet.
* Science definitions for Oynag and Whayt by Wolf-Rayet.
* Remove AtmosphericTriplanarZoomRotation from Garner. The material type is still there, it's just not being forced to show up when the player selects the lower quality terrain setting, which breaks the rendering.
* New loading screen "Splash Down Hard."
* Rename ThreeAliens loading screen to AlienSpaceOdyssey to pay a more specific homage to the Kerbal Space Odyssey painting that became the KSP loading screen.
* Fix a bug relating to a settings file.

--- a/GameData/PJ2/KopernicusFiles/3_OuterSystem/IlioABC_b/0_Oynag.cfg
+++ b/GameData/PJ2/KopernicusFiles/3_OuterSystem/IlioABC_b/0_Oynag.cfg
@@ -48,6 +48,29 @@
 			meanAnomalyAtEpochD = 348
 			inclination = 2.3
 		}
+		Rings
+		{
+			Ring //Invisible from the front!
+			{
+				angle = 46.8
+				innerRadius = 1500
+				outerRadius = 1550
+				texture = PJ2/KopernicusFiles/3_OuterSystem/IlioABC_b/PluginData/Oynag_RingsBlank.dds 
+				color = 1,1,1,1
+				unlit = false
+				lockRotation = true
+				useNewShader = true
+				penumbraMultiplier = 8
+				steps = 1000
+				longitudeOfAscendingNode = 193
+
+				//Sabine Backlit Patch Support
+				albedoStrength = 1
+				scatteringStrength = 1
+				anisotropy = 0.7
+				backlitTexture = PJ2/KopernicusFiles/3_OuterSystem/IlioABC_b/PluginData/Oynag_RingsBacklit.dds
+			}
+		}
 		ScaledVersion
 		{
 			type = Atmospheric
