--- a/GameData/PJ2/KopernicusFiles/3_OuterSystem/IlioABC_b/G0_Descry.cfg
+++ b/GameData/PJ2/KopernicusFiles/3_OuterSystem/IlioABC_b/G0_Descry.cfg
@@ -61,6 +61,12 @@
 				useNewShader = true
 				penumbraMultiplier = 8
 				steps = 1000
+
+				//Sabine Backlit Patch Support
+				albedoStrength = 1
+				scatteringStrength = 1
+				anisotropy = 0.7
+				backlitTexture = PJ2/KopernicusFiles/3_OuterSystem/IlioABC_b/PluginData/Descry_RingsBacklit.dds
 			}
 		}
 		ScaledVersion
