--- a/GameData/PJ2/KopernicusFiles/1_InnerSystem/IlioAB_c/Kilna.cfg
+++ b/GameData/PJ2/KopernicusFiles/1_InnerSystem/IlioAB_c/Kilna.cfg
@@ -50,6 +50,12 @@
 				useNewShader = true
 				penumbraMultiplier = 8
 				steps = 1000
+
+				//Sabine Backlit Patch Support
+				albedoStrength = 1
+				scatteringStrength = 1
+				anisotropy = 0.7
+				backlitTexture = PJ2/KopernicusFiles/1_InnerSystem/IlioAB_c/PluginData/Kilna_RingsBacklit.dds
 			}
 		}
 		Atmosphere				
