fix terrain materials on low-quality terrain texture settings
* Fix a glitch that made terrain on many worlds appear glitched when the terrain texture settings were not set to "Ultra," by commenting out "materialType = AtmosphericTriplanarZoomRotation" in all configs which used it. This should not change the behavior with the Ultra shader, since all planets use that material type anyway now.

--- a/GameData/PJ2/KopernicusFiles/1_InnerSystem/Gwargin/4_Phomos.cfg
+++ b/GameData/PJ2/KopernicusFiles/1_InnerSystem/Gwargin/4_Phomos.cfg
@@ -89,7 +89,7 @@
 			fadeStart = 9500
 			fadeEnd = 9750
 			deactivateAltitude = 35000
-			materialType = AtmosphericTriplanarZoomRotation
+			//materialType = AtmosphericTriplanarZoomRotation
 			Mods
 			{
 				VertexColorMap
