--- a/GameData/PJ2/KopernicusFiles/1_InnerSystem/Gwargin/5_Bercue.cfg
+++ b/GameData/PJ2/KopernicusFiles/1_InnerSystem/Gwargin/5_Bercue.cfg
@@ -91,7 +91,7 @@
 			minDetailDistance = 8
 			maxQuadLengthsPerFrame = 0.03
 			deactivateAltitude = 35000
-			materialType = AtmosphericTriplanarZoomRotation
+			//materialType = AtmosphericTriplanarZoomRotation
 			Mods
 			{
 				VertexColorMap
