--- a/GameData/PJ2/KopernicusFiles/1_InnerSystem/IlioAB_c/Drae.cfg
+++ b/GameData/PJ2/KopernicusFiles/1_InnerSystem/IlioAB_c/Drae.cfg
@@ -356,7 +356,7 @@
 		}
 		PQS
 		{
-			materialType = AtmosphericTriplanarZoomRotation
+			//materialType = AtmosphericTriplanarZoomRotation
 			fadeStart = 45000
 			fadeEnd = 50000
 			deactivateAltitude = 55000
