--- a/GameData/PJ2/KopernicusFiles/1_InnerSystem/IlioAB_d/Ilmar.cfg
+++ b/GameData/PJ2/KopernicusFiles/1_InnerSystem/IlioAB_d/Ilmar.cfg
@@ -239,7 +239,7 @@
 		}
 		PQS
 		{
-			materialType = AtmosphericTriplanarZoomRotation
+			//materialType = AtmosphericTriplanarZoomRotation
 			fadeStart = 35000
 			fadeEnd = 50000
 			deactivateAltitude = 55000
