--- a/GameData/PJ2/KopernicusFiles/2_PyriSystem/IlioC_0_Trojan/Eron.cfg
+++ b/GameData/PJ2/KopernicusFiles/2_PyriSystem/IlioC_0_Trojan/Eron.cfg
@@ -83,7 +83,7 @@
 		{
 			minLevel = 2
 			maxLevel = 4
-			materialType = AtmosphericTriplanarZoomRotation
+			//materialType = AtmosphericTriplanarZoomRotation
 			Material
 			{
 				factor = 10
