--- a/GameData/PJ2/KopernicusFiles/2_PyriSystem/IlioC_b_HOMEWORLD/AlternateVersion/CBx/PJ2_SettingsHack.cfg
+++ b/GameData/PJ2/KopernicusFiles/2_PyriSystem/IlioC_b_HOMEWORLD/AlternateVersion/CBx/PJ2_SettingsHack.cfg
@@ -219,7 +219,7 @@
 			fadeStart = 100000
 			fadeEnd = 145000
 			deactivateAltitude = 56000
-			materialType = AtmosphericTriplanarZoomRotation
+			//materialType = AtmosphericTriplanarZoomRotation
 			Mods
 			{
 				VertexColorMap
