--- a/GameData/PJ2/KopernicusFiles/2_PyriSystem/IlioC_e/1-Mani.cfg
+++ b/GameData/PJ2/KopernicusFiles/2_PyriSystem/IlioC_e/1-Mani.cfg
@@ -94,7 +94,7 @@
 			fadeStart = 40000
 			fadeEnd = 41000
 			deactivateAltitude = 42000
-			materialType = AtmosphericTriplanarZoomRotation
+			//materialType = AtmosphericTriplanarZoomRotation
 			Mods
 			{
 				VertexColorMap
