--- a/GameData/PJ2/KopernicusFiles/2_PyriSystem/IlioC_f/IlioC_f_0_Sinacin.cfg
+++ b/GameData/PJ2/KopernicusFiles/2_PyriSystem/IlioC_f/IlioC_f_0_Sinacin.cfg
@@ -258,7 +258,7 @@
 			fadeStart = 4000
 			fadeEnd = 7000
 			deactivateAltitude = 7000
-			materialType = AtmosphericTriplanarZoomRotation
+			//materialType = AtmosphericTriplanarZoomRotation
 			Mods
 			{
 				VertexMitchellNetravaliHeightMap
