--- a/GameData/PJ2/KopernicusFiles/2_PyriSystem/IlioC_f/IlioC_f_D_i_Jones.cfg
+++ b/GameData/PJ2/KopernicusFiles/2_PyriSystem/IlioC_f/IlioC_f_D_i_Jones.cfg
@@ -89,7 +89,7 @@
 			//fadeStart = 9000
 			//fadeEnd = 10000
 			//deactivateAltitude = 10000
-			materialType = AtmosphericTriplanarZoomRotation
+			//materialType = AtmosphericTriplanarZoomRotation
 			
 			Mods
 			{
