--- a/GameData/PJ2/KopernicusFiles/3_OuterSystem/IlioABC_b/6_Acic.cfg
+++ b/GameData/PJ2/KopernicusFiles/3_OuterSystem/IlioABC_b/6_Acic.cfg
@@ -78,7 +78,7 @@
 			fadeStart = 30000
 			fadeEnd = 34000
 			deactivateAltitude = 35000
-			materialType = AtmosphericTriplanarZoomRotation
+			//materialType = AtmosphericTriplanarZoomRotation
 			Mods
 			{
 				VertexColorMap
