--- a/GameData/PJ2/KopernicusFiles/3_OuterSystem/IlioABC_d/KopernicusFiles/Kialla/0_Kialla.cfg
+++ b/GameData/PJ2/KopernicusFiles/3_OuterSystem/IlioABC_d/KopernicusFiles/Kialla/0_Kialla.cfg
@@ -107,7 +107,7 @@
 			minLevel = 2
 			maxLevel = 8
 			minDetailDistance = 6
-			materialType = AtmosphericTriplanarZoomRotation
+			//materialType = AtmosphericTriplanarZoomRotation
 			maxQuadLengthsPerFrame = 0.03	
 			Material
 			{
