--- a/GameData/PJ2/KopernicusFiles/1_InnerSystem/Gwargin/3_Deibos.cfg
+++ b/GameData/PJ2/KopernicusFiles/1_InnerSystem/Gwargin/3_Deibos.cfg
@@ -79,7 +79,7 @@
 			fadeStart = 9500
 			fadeEnd = 9750
 			deactivateAltitude = 35000
-			materialType = AtmosphericTriplanarZoomRotation
+			//materialType = AtmosphericTriplanarZoomRotation
 			Mods
 			{
 				VertexColorMap
