--- a/GameData/PJ2/KopernicusFiles/1_InnerSystem/IlioAB_c/Hemantreeantbumbalo.cfg
+++ b/GameData/PJ2/KopernicusFiles/1_InnerSystem/IlioAB_c/Hemantreeantbumbalo.cfg
@@ -74,7 +74,7 @@
 			fadeStart = 30000
 			fadeEnd = 34000
 			deactivateAltitude = 35000
-			materialType = AtmosphericTriplanarZoomRotation
+			//materialType = AtmosphericTriplanarZoomRotation
 			Mods
 			{
 				VertexColorMap
