--- a/GameData/PJ2/KopernicusFiles/3_OuterSystem/IlioABC_b/4_Fundus.cfg
+++ b/GameData/PJ2/KopernicusFiles/3_OuterSystem/IlioABC_b/4_Fundus.cfg
@@ -85,7 +85,7 @@
 			fadeStart = 30000
 			fadeEnd = 34000
 			deactivateAltitude = 35000
-			materialType = AtmosphericTriplanarZoomRotation
+			//materialType = AtmosphericTriplanarZoomRotation
 			Mods
 			{
 				VertexColorMap
