Barycenter fix attempts, De-barycenter Option, City Lights option, more
* Give Desmet science multipliers
* Add a Barycenter Killer patch, available in the SETTINGS.cfg, disabled by default.
* Add EVE city lights to Armstrong, available in the SETTINGS.cfg, disabled by default.
* Add three Kronometer modes, switchable in SETTINGS.cfg.
* Attempt to reduce asteroid spawn rates.
* Enable WarnShaders and EnforcedShaderLevel 3 to Kopernicus config.
* Change SOIs of Phosphol and Vespol so they do not overlap the barycenter.
* Attempt to fix the barycenter issues on Gerro/Sandevistan and Phrye-Wepor.
* Tidally lock Kialla to Nevig.
* Add more Loading Screens. Two by Techo and one by Wolf.
    * Rename PlanetaryChart.dds to PyriPlanetaryChart.dds
    * Add IlioPlanetaryChart.dds
    * Add TechoArmstrong.dds and TechoGemini.dds

--- a/GameData/PJ2/Career/ScienceBalancing.cfg
+++ b/GameData/PJ2/Career/ScienceBalancing.cfg
@@ -67,7 +67,7 @@
 			}
 		}
 	}
-	@Body[Buzz]
+	@Body[Desmet]
 	{
 		@Properties
 		{
@@ -75,7 +75,7 @@
 			ScienceValues
 			{
 				landedDataValue = 3.8
-				inSpaceLowDataValue = 2
+				inSpaceLowDataValue = 2.2
 				inSpaceHighDataValue = 1.8
 				recoveryValue = 1.5
 				spaceAltitudeThreshold = 16000
