--- a/GameData/PJ2/KopernicusFiles/00_System/KopSettingsPatch.cfg
+++ b/GameData/PJ2/KopernicusFiles/00_System/KopSettingsPatch.cfg
@@ -1,4 +1,6 @@
 @Kopernicus_config
 {
 	@DisableFarAwayColliders  = True
+	@WarnShaders = True //Boolean.  Whether or not to warn the user with a message if not using EnforcedShaderLevel.
+	@EnforcedShaderLevel = 3
 }
