--- a/GameData/PJ2/KopernicusFiles/1_InnerSystem/IlioAB_b/OlloAsteroids.cfg
+++ b/GameData/PJ2/KopernicusFiles/1_InnerSystem/IlioAB_b/OlloAsteroids.cfg
@@ -1,4 +1,4 @@
-@Kopernicus:FOR[TheStarclimberProgram]
+@Kopernicus:FOR[PJ2]
 {
 	Asteroid
 	{
@@ -28,7 +28,7 @@
 				{
 					body = PJ2/Ollo
 					probability = 75 //functionality unknown, presumed inert
-					reached = false //spawn asteroids only once the body has been visited?
+					reached = true //spawn asteroids only once the body has been visited?
 					semiMajorAxis
 					{		
 						minValue = 4200000
