--- a/GameData/PJ2/KopernicusFiles/1_InnerSystem/IlioAB_e/IlioAB_e.cfg
+++ b/GameData/PJ2/KopernicusFiles/1_InnerSystem/IlioAB_e/IlioAB_e.cfg
@@ -14,9 +14,8 @@
 
 		Template
 		{
-			name = Mun
-			removeAllPQSMods = True
-			removePQS = True
+			name = Bop
+			//removePQS = True
 			removeProgressTree = True
 		}
 		Orbit
@@ -25,7 +24,7 @@
 			
 			//THIS IS THE ONLY FIELD IN THE ORBIT NODE YOU SHOULD CHANGE:
 			color = 1,1,1,1
-			iconTexture = PJ2/KopernicusFiles/00_System/Icons/BarycenterIcon.png
+			iconTexture = PJ2/KopernicusFiles/00_System/Icons/BarycenterIconGS.png
 			
 			//orbital elements (DO NOT CHANGE)
 			//1 au (kerbal scale)
@@ -43,44 +42,24 @@
 		Properties
 		{
 			displayName = Gerro-Sandevistan Barycenter
-			description = The center of mass between Gerro and Sandevistan.\n -Interplanet Janet & Marshall (Myth)
+			description = The center of mass between Gerro and Sandevistan. Astronomers are by now confident this point in space is in fact empty, or that if it weren't, whatever lies there would soon fall towards one planet or the other. Nevertheless, you can guarantee that the restricted 3-body patched conics simulation used by space programs throughout history will be inadequate (or at the very least, counter-intuitive) for understanding trajectories in this domain. Just a fair warning.\n -Interplanet Janet & Marshall (Myth)
 			radius = 1000000
 			mass = 5.97219e22
 			@mass *= 34
 			rotates = true
-			tidallyLocked = false
-			rotationPeriod = 21600
-			initialRotation = 45
-			isHomeWorld = false
+			initialRotation = 0
 			timewarpAltitudeLimits = 0 0 0 0 0 0 0 1000
-			rotationPeriod = 2215129.5488043064
+			
 			//Semimajoraxis = 256342499
 			//Mp = 17.5 Mearth
 			//Ms = 16.5 Mearth
 			//SMAp = 124401507
 			//SMAs = 131940992
-			ScienceValues
-			{
-				landedDataValue = 2.2
-				inSpaceLowDataValue = 1.0
-				inSpaceHighDataValue = 0.8
-				recoveryValue = 3.5
-				spaceAltitudeThreshold = 25000
-			}
 		}
 		ScaledVersion
 		{
-			type = Vacuum
-			fadeStart = 68000
-			fadeEnd = 70000
 			invisible = true
-			Material
-			{
-				color = 1,1,1,1
-				shininess = 0.03
-				texture = PJ2/KopernicusFiles/1_InnerSystem/IlioAB_e/PluginData/Blank.png
- 				normals = PJ2/KopernicusFiles/1_InnerSystem/IlioAB_e/PluginData/Blank.png
-			}
 		}
+		!PQS{}
 	}
 }
