--- a/GameData/PJ2/KopernicusFiles/1_InnerSystem/IlioAB_e/IlioAB_e_1_Gerro.cfg
+++ b/GameData/PJ2/KopernicusFiles/1_InnerSystem/IlioAB_e/IlioAB_e_1_Gerro.cfg
@@ -110,6 +110,7 @@
 			
 			//THIS IS THE ONLY FIELD IN THE ORBIT NODE YOU SHOULD CHANGE:
 			color = 0.6,0.8,1,1
+			//color = RGBA(153,204,255,255)
 
 			semiMajorAxis = 124401507
 			
