--- a/GameData/PJ2/KopernicusFiles/3_OuterSystem/IlioABC_d/KopernicusFiles/Kialla/1_Moxxie.cfg
+++ b/GameData/PJ2/KopernicusFiles/3_OuterSystem/IlioABC_d/KopernicusFiles/Kialla/1_Moxxie.cfg
@@ -1,4 +1,4 @@
-@Kopernicus:AFTER[KOPERNICUS]
+@Kopernicus:FOR[PJ2]
 {
 	Asteroid
 	{
@@ -8,8 +8,8 @@
 		minUntrackedLifetime = 3.402823E+38
 		maxUntrackedLifetime = 3.402823E+38
 		probability = 100
-		spawnGroupMinLimit = 100
-		spawnGroupMaxLimit = 100
+		spawnGroupMinLimit = 1
+		spawnGroupMaxLimit = 1
 		Size
 		{
 			key = 0 0.999
