--- a/GameData/PJ2/KopernicusFiles/3_OuterSystem/IlioABC_d/KopernicusFiles/Kialla/4_0_BarycenterPW.cfg
+++ b/GameData/PJ2/KopernicusFiles/3_OuterSystem/IlioABC_d/KopernicusFiles/Kialla/4_0_BarycenterPW.cfg
@@ -8,7 +8,7 @@
 		Template
 		{
 			name = Bop
-			removePQS = True
+			//removePQS = True
 			removeProgressTree = True
 		}
 		Properties
@@ -17,7 +17,6 @@
 			displayName = Phyre-Wepor Barycenter^N
 			radius = 1000
 			mass = 1.95645e17
-			inverseRotThresholdAltitude = 0
 			//1.20345e17+7.53e16
 			//semimajoraxis = 80000
 			//SMA_A =  25006.2266
