Armstrong's Solar Day = 6 hours
* Move Armstrong about 14 kilometers closer to Pyri, to give it a slightly shorter orbital period and thus a solar rotation period of exactly 6 hours.
* and reflect this in the now much less important kronometer configs.

--- a/GameData/PJ2/KopernicusFiles/2_PyriSystem/IlioC_b_HOMEWORLD/0_Armstrong.cfg
+++ b/GameData/PJ2/KopernicusFiles/2_PyriSystem/IlioC_b_HOMEWORLD/0_Armstrong.cfg
@@ -47,8 +47,9 @@
 		PostSpawnOrbit
 		{
 			%referenceBody = PJ2/C_Pyri
-			%semiMajorAxis = 107857816.739578455687
-			//%period = 21600
+			%semiMajorAxis = 107843837.892469520688057
+			//solarRotationPeriod = 21600
+			//period = 21595.800954062549080444
 		}
 		@Properties
 		{
