--- a/GameData/PJ2/Kronometer/ArmstrongDays.cfg
+++ b/GameData/PJ2/Kronometer/ArmstrongDays.cfg
@@ -12,22 +12,21 @@
 			singular = second
 			plural = seconds
 			symbol = s
-			value = 1.0001944758796296
+			value = 1
 		}
 		Minute
 		{
 			singular = minute
 			plural = minutes
 			symbol = m
-			value = 60.011668552777777
+			value = 60
 		}
 		Hour
 		{
 			singular = hour
 			plural = hours
 			symbol = h
-			//value = 3600
-			value = 3600.7001131666667
+			value = 3600
 		}
 		
 		//6 hours per day
@@ -38,7 +37,7 @@
 			plural = days
 			symbol = d
 			//value = 21600 //6 hours
-			value = 21604.200679 //6 hours, 4.200679 seconds. Armstrong's solar day.
+			value = 21600 //Armstrong's solar day.
 		}
 		
 		//4 days per Quad.
@@ -48,7 +47,7 @@
 			singular = Quad
 			plural = Quads
 			symbol = Q
-			value = 86416.8027 //24 hours, 16.8027 seconds
+			value = 86400
 		}
 	}
 }
