--- a/GameData/PJ2/Kronometer/ArmstrongEarth.cfg
+++ b/GameData/PJ2/Kronometer/ArmstrongEarth.cfg
@@ -12,22 +12,21 @@
 			singular = second
 			plural = seconds
 			symbol = s
-			value = 1.0001944758796296
+			value = 1
 		}
 		Minute
 		{
 			singular = minute
 			plural = minutes
 			symbol = m
-			value = 60.011668552777777
+			value = 60
 		}
 		Hour
 		{
 			singular = hour
 			plural = hours
 			symbol = h
-			//value = 3600
-			value = 3600.7001131666667
+			value = 3600
 		}
 		
 		//24 hours per day
@@ -37,10 +36,8 @@
 			singular = day
 			plural = days
 			symbol = d
-			value = 86416.8027 //24 hours, 16.8027 seconds. 4 times Armstrong's solar day.
+			value = 86400 //24 hours. 4 times Armstrong's solar day.
 		}
-		
-		//1285.50641 days per year
 		
 		Year
 		{
