--- a/GameData/PJ2/SETTINGS.cfg
+++ b/GameData/PJ2/SETTINGS.cfg
@@ -33,9 +33,8 @@ PJ2_Settings
 	KronometerClock = ArmstrongDefault
 	
 	//Options are ArmstrongDefault, ArmstrongEarth, and ArmstrongDays.
-	//All three are timed to define 6 hours as 1 Armstrong Solar Day, rather than a sideral day.
-	//ArmstrongDefault uses a 6 hour clock which matches Armstrong's rotation period.
-	//ArmstrongEarth uses a 24 hour clock, with four Armstrong solar days in one "day."
+	//ArmstrongDefault uses an exactly 6 hour clock which matches Armstrong's solar day.
+	//ArmstrongEarth uses an exactly 24 hour clock, with four Armstrong solar days in one "day."
 	//ArmstrongDays is a hybrid, with a 6 hour day and a 24 hour, 4-day "quad," replacing the year.
 	
 	
