--- a/GameData/PJ2/KopernicusFiles/2_PyriSystem/IlioC_b_HOMEWORLD/AlternateVersion/CBx/PJ2_SettingsHack.cfg
+++ b/GameData/PJ2/KopernicusFiles/2_PyriSystem/IlioC_b_HOMEWORLD/AlternateVersion/CBx/PJ2_SettingsHack.cfg
@@ -68,8 +68,9 @@
 			mode = OFF
 			icon = NONE
             
-			semiMajorAxis = 107857816.739578455687
-			//period = 21600
+			semiMajorAxis = 107843837.892469520688057
+			//solarRotationPeriod = 21600
+			//period = 21595.800954062549080444
 		}
 		ScaledVersion
 		{
