--- a/GameData/PJ2/KopernicusFiles/2_PyriSystem/IlioC_b_t_Garner/Garner.cfg
+++ b/GameData/PJ2/KopernicusFiles/2_PyriSystem/IlioC_b_t_Garner/Garner.cfg
@@ -118,8 +118,9 @@
 			color = 0.518,0.604,0.600,1
 			iconTexture = PJ2/KopernicusFiles/2_PyriSystem/IlioC_ba_ASTEROID_BELT/Icons/SpaceObject_Large.png
 
-			semiMajorAxis = 107857816.739578455687
-			//period = 21600
+			semiMajorAxis = 107843837.892469520688057
+			//solarRotationPeriod = 21600
+			//period = 21595.800954062549080444
 		}
 		ScaledVersion
 		{
