--- a/GameData/PJ2/KopernicusFiles/2_PyriSystem/IlioC_b_t_Lu/Lu.cfg
+++ b/GameData/PJ2/KopernicusFiles/2_PyriSystem/IlioC_b_t_Lu/Lu.cfg
@@ -223,8 +223,9 @@
 			longitudeOfAscendingNode = -20
 			color = 0.576319873,0.467269987,0.513650298,1
 
-			semiMajorAxis = 107857816.739578455687
-			//period = 21600
+			semiMajorAxis = 107843837.892469520688057
+			//solarRotationPeriod = 21600
+			//period = 21595.800954062549080444
 		}
 		ScaledVersion
 		{
