--- a/GameData/PJ2/Kronometer/ArmstrongDefault.cfg
+++ b/GameData/PJ2/Kronometer/ArmstrongDefault.cfg
@@ -12,14 +12,14 @@
 			singular = second
 			plural = seconds
 			symbol = s
-			value = 1.0001944758796296
+			value = 1
 		}
 		Minute
 		{
 			singular = minute
 			plural = minutes
 			symbol = m
-			value = 60.011668552777777
+			value = 60
 		}
 		Hour
 		{
@@ -27,7 +27,7 @@
 			plural = hours
 			symbol = h
 			//value = 3600
-			value = 3600.7001131666667
+			value = 3600
 		}
 		
 		//6 hours per day
@@ -37,7 +37,7 @@
 			singular = day
 			plural = days
 			symbol = d
-			value = 21604.200679 //6 hours, 4.200679 seconds. Armstrong's solar day.
+			value = 21600
 		}
 		
 		//5142.02565 days per year.
